Fix: Truncate huge notification numbers in guilds list

--- a/src/components/primary/channels/_badge.scss
+++ b/src/components/primary/channels/_badge.scss
@@ -12,3 +12,9 @@ div[class^="channels-"] div[class*="contentHoveredText"] > div[class*="flex"] > 
     box-shadow: none;
     font-weight: normal;
 }
+
+.guilds .badge{
+    max-width: 24px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
